crates/core/tests/compile_fail/duplicate_rename.stderr
error: duplicate `rename` attribute
 --> tests/compile_fail/duplicate_rename.rs:5:26
  |
5 |     #[seam(rename = "a", rename = "b")]
  |                          ^^^^^^
